BEM for index (without modal)

--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
       <div class="container">
         <nav class="nav">
           <a href="#" class="logo"><span class="logo-span">Web</span>Studio</a>
-          <ul class="list nav-list">
+          <ul class="nav-list">
             <li>
               <a class="link" href="./index.html">Студия</a>
             </li>
@@ -33,7 +33,7 @@
             </li>
           </ul>
         </nav>
-        <ul class="list media-list">
+        <ul class="media-list">
           <li class="media-list-item">
             <a class="link" href="mailto:info@devstudio.com">
               <svg class="header-icon" width="16" height="12">
@@ -57,7 +57,7 @@
       <section class="section">
         <div class="container">
           <h1 class="hidden-heading">Portfolio</h1>
-          <ul class="list filter-list">
+          <ul class="filter-list">
             <li>
               <button class="filter filter-all" type="button">Все</button>
             </li>
@@ -66,7 +66,7 @@
             <li><button class="filter" type="button">Дизайн</button></li>
             <li><button class="filter" type="button">Маркетинг</button></li>
           </ul>
-          <ul class="list projects-list">
+          <ul class="projects-list">
             <li>
               <a href="#" class="projects-list-item">
                 <div class="description-img">
@@ -240,7 +240,7 @@
             ><span class="logo-span">Web</span>Studio</a
           >
           <address>
-            <ul class="list address-list">
+            <ul class="address-list">
               <li>г. Киев, пр-т Леси Украинки, 26</li>
               <li>
                 <a class="link" href="mailto:info@devstudio.com"
@@ -255,7 +255,7 @@
         </div>
         <div class="footer-social">
           <p class="footer-title">Присоединяйтесь</p>
-          <ul class="icons-list-footer list">
+          <ul class="icons-list-footer">
             <li>
               <a href="#">
                 <svg class="icon">
