--- a/index.html
+++ b/index.html
@@ -446,81 +446,86 @@
         </div>
       </div>
     </footer>
-    <div data-modal class="backdrop is-hidden">
-      <div class="modal-content">
+    <!-- <div data-modal class="backdrop is-hidden"> -->
+    <div data-modal class="backdrop">
+      <div class="modal">
         <button data-modal-close class="modal-close">
-          <svg class="close-modal-icon">
+          <svg class="modal-close__icon">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
         <form action="#" class="modal-form">
-          <p class="modal-form-title">
+          <p class="modal-form__title">
             Оставьте свои данные, мы вам перезвоним
           </p>
-          <label class="modal-form-field">
+          <label class="modal-form__field">
             Имя
-            <span class="modal-form-field-wrap">
+            <span class="modal-form__field-wrap">
               <input
                 type="text"
                 minlength="2"
                 name="user-name"
-                class="modal-form-input"
+                class="modal-form__input"
                 required
               />
-              <svg class="modal-form-icon">
+              <svg class="modal-form__icon">
                 <use href="./images/icons.svg#icon-person-form"></use>
               </svg>
             </span>
           </label>
-          <label class="modal-form-field">
+          <label class="modal-form__field">
             Телефон
-            <span class="modal-form-field-wrap">
+            <span class="modal-form__field-wrap">
               <input
                 type="tel"
                 pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
                 name="user-phone"
-                class="modal-form-input"
+                class="modal-form__input"
                 required
-              /><svg class="modal-form-icon">
+              /><svg class="modal-form__icon">
                 <use href="./images/icons.svg#icon-phone-form"></use>
               </svg>
             </span>
           </label>
-          <label class="modal-form-field">
+          <label class="modal-form__field">
             Почта
-            <span class="modal-form-field-wrap">
+            <span class="modal-form__field-wrap">
               <input
                 type="email"
                 name="user-email"
-                class="modal-form-input"
+                class="modal-form__input"
                 required
               />
-              <svg class="modal-form-icon">
+              <svg class="modal-form__icon">
                 <use href="./images/icons.svg#icon-email-form"></use>
               </svg>
             </span>
           </label>
-          <label class="modal-form-field modal-form-area">
+          <label class="modal-form__field modal-form__field--area">
             Комментарий
             <textarea
               name="user-coment"
-              class="modal-form-text"
+              class="modal-form__text"
               placeholder="Введите текст"
             ></textarea>
           </label>
           <input
-            class="modal-form-check visually-hidden"
+            class="modal-form__check visually-hidden"
             type="checkbox"
             id="checkbox"
             name="user-agree"
             required
           />
-          <label for="checkbox" class="modal-form-agree-label">
-            <span class="modal-form-check-wrap"></span>
+          <label for="checkbox" class="modal-form__agree-label">
+            <span class="modal-form__check-wrap"></span>
             Соглашаюсь с рассылкой и принимаю&nbsp
-            <a href=""> Условия договора</a></label
+            <a href="" class="modal-form__agreements">
+              Условия договора</a
+            ></label
           >
-          <button type="submit" class="sign-button">Отправить</button>
+          <button type="submit" class="sign-button modal-form__sign-button">
+            Отправить
+          </button>
         </form>
       </div>
     </div>
