portfolio.html to BEM

--- a/index.html
+++ b/index.html
@@ -446,8 +446,7 @@
         </div>
       </div>
     </footer>
-    <!-- <div data-modal class="backdrop is-hidden"> -->
-    <div data-modal class="backdrop">
+    <div data-modal class="backdrop is-hidden">
       <div class="modal">
         <button data-modal-close class="modal-close">
           <svg class="modal-close__icon">
