--- a/portfolio.html
+++ b/portfolio.html
@@ -18,33 +18,37 @@
   </head>
   <body>
     <header class="header">
-      <div class="container">
+      <div class="container header__container">
         <nav class="nav">
-          <a href="#" class="logo"><span class="logo-span">Web</span>Studio</a>
+          <a href="#" class="logo"><span class="logo__name">Web</span>Studio</a>
           <ul class="nav-list">
-            <li>
-              <a class="link" href="./index.html">Студия</a>
+            <li class="nav-list__item">
+              <a class="nav-list__link" href="./index.html">Студия</a>
             </li>
-            <li class="underline">
-              <a class="link active" href="./portfolio.html">Портфолио</a>
+            <li class="nav-list__item nav-list__item--active">
+              <a
+                class="nav-list__link nav-list__link--active"
+                href="./portfolio.html"
+                >Портфолио</a
+              >
             </li>
-            <li>
-              <a class="link" href="#">Контакты</a>
+            <li class="nav-list__item">
+              <a class="nav-list__link" href="#">Контакты</a>
             </li>
           </ul>
         </nav>
         <ul class="media-list">
-          <li class="media-list-item">
-            <a class="link" href="mailto:info@devstudio.com">
-              <svg class="header-icon" width="16" height="12">
+          <li class="media-list__item">
+            <a class="media-list__link" href="mailto:info@devstudio.com">
+              <svg class="media-list__icon" width="16" height="12">
                 <use href="./images/icons.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com
             </a>
           </li>
-          <li class="media-list-item">
-            <a class="link" href="tel:+380961111111">
-              <svg class="header-icon" width="10" height="16">
+          <li class="media-list__item">
+            <a class="media-list__link" href="tel:+380961111111">
+              <svg class="media-list__icon" width="10" height="16">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11
@@ -55,177 +59,185 @@
     </header>
     <main>
       <section class="section">
+        <h1 class="hidden-heading">Portfolio</h1>
         <div class="container">
-          <h1 class="hidden-heading">Portfolio</h1>
-          <ul class="filter-list">
-            <li>
-              <button class="filter filter-all" type="button">Все</button>
+          <ul class="filters">
+            <li class="filters__item">
+              <button class="filter filter--all" type="button">Все</button>
             </li>
-            <li><button class="filter" type="button">Веб-сайты</button></li>
-            <li><button class="filter" type="button">Приложения</button></li>
-            <li><button class="filter" type="button">Дизайн</button></li>
-            <li><button class="filter" type="button">Маркетинг</button></li>
+            <li class="filters__item">
+              <button class="filter" type="button">Веб-сайты</button>
+            </li>
+            <li class="filters__item">
+              <button class="filter" type="button">Приложения</button>
+            </li>
+            <li class="filters__item">
+              <button class="filter" type="button">Дизайн</button>
+            </li>
+            <li class="filters__item">
+              <button class="filter" type="button">Маркетинг</button>
+            </li>
           </ul>
-          <ul class="projects-list">
-            <li>
-              <a href="#" class="projects-list-item">
-                <div class="description-img">
+          <ul class="projects">
+            <li class="projects__item">
+              <a href="#" class="projects__link">
+                <div class="projects__img">
                   <img
                     src="./images/techcrack.jpg"
                     alt="techcrack"
                     width="370"
                   />
-                  <p class="description-text">
+                  <p class="projects__text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-                <div class="project-info">
-                  <h2 class="project-title">Технокряк</h2>
-                  <p class="project-type">Веб-сайт</p>
+                <div class="projects__info">
+                  <h2 class="projects__title">Технокряк</h2>
+                  <p class="projects__type">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li>
-              <a href="#" class="projects-list-item">
-                <div class="description-img">
+            <li class="projects__item">
+              <a href="#" class="projects__link">
+                <div class="projects__img">
                   <img src="./images/poster.jpg" alt="poster" width="370" />
-                  <p class="description-text">
+                  <p class="projects__text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-                <div class="project-info">
-                  <h2 class="project-title">
+                <div class="projects__info">
+                  <h2 class="projects__title">
                     Постер New Orlean vs Golden Star
                   </h2>
-                  <p class="project-type">Дизайн</p>
+                  <p class="projects__type">Дизайн</p>
                 </div>
               </a>
             </li>
-            <li>
-              <a href="#" class="projects-list-item">
-                <div class="description-img">
+            <li class="projects__item">
+              <a href="#" class="projects__link">
+                <div class="projects__img">
                   <img src="./images/seafood.jpg" alt="seafood" width="370" />
-                  <p class="description-text">
+                  <p class="projects__text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-                <div class="project-info">
-                  <h2 class="project-title">Ресторан Seafood</h2>
-                  <p class="project-type">Приложение</p>
+                <div class="projects__info">
+                  <h2 class="projects__title">Ресторан Seafood</h2>
+                  <p class="projects__type">Приложение</p>
                 </div>
               </a>
             </li>
-            <li>
-              <a href="#" class="projects-list-item">
-                <div class="description-img">
+            <li class="projects__item">
+              <a href="#" class="projects__link">
+                <div class="projects__img">
                   <img src="./images/prime.jpg" alt="prime" width="370" />
-                  <p class="description-text">
+                  <p class="projects__text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-                <div class="project-info">
-                  <h2 class="project-title">Проект Prime</h2>
-                  <p class="project-type">Маркетинг</p>
+                <div class="projects__info">
+                  <h2 class="projects__title">Проект Prime</h2>
+                  <p class="projects__type">Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li>
-              <a href="#" class="projects-list-item">
-                <div class="description-img">
+            <li class="projects__item">
+              <a href="#" class="projects__link">
+                <div class="projects__img">
                   <img src="./images/boxes.jpg" alt="boxes" width="370" />
-                  <p class="description-text">
+                  <p class="projects__text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-                <div class="project-info">
-                  <h2 class="project-title">Проект Boxes</h2>
-                  <p class="project-type">Приложение</p>
+                <div class="projects__info">
+                  <h2 class="projects__title">Проект Boxes</h2>
+                  <p class="projects__type">Приложение</p>
                 </div>
               </a>
             </li>
-            <li>
-              <a href="#" class="projects-list-item">
-                <div class="description-img">
+            <li class="projects__item">
+              <a href="#" class="projects__link">
+                <div class="projects__img">
                   <img
                     src="./images/noborders.jpg"
                     alt="noborders"
                     width="370"
                   />
-                  <p class="description-text">
+                  <p class="projects__text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-                <div class="project-info">
-                  <h2 class="project-title">Inspiration has no borders</h2>
-                  <p class="project-type">Веб-сайт</p>
+                <div class="projects__info">
+                  <h2 class="projects__title">Inspiration has no borders</h2>
+                  <p class="projects__type">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li>
-              <a href="#" class="projects-list-item">
-                <div class="description-img">
+            <li class="projects__item">
+              <a href="#" class="projects__link">
+                <div class="projects__img">
                   <img
                     src="./images/limedition.jpg"
                     alt="limedition"
                     width="370"
                   />
-                  <p class="description-text">
+                  <p class="projects__text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-                <div class="project-info">
-                  <h2 class="project-title">Издание Limited Edition</h2>
-                  <p class="project-type">Дизайн</p>
+                <div class="projects__info">
+                  <h2 class="projects__title">Издание Limited Edition</h2>
+                  <p class="projects__type">Дизайн</p>
                 </div>
               </a>
             </li>
-            <li>
-              <a href="#" class="projects-list-item">
-                <div class="description-img">
+            <li class="projects__item">
+              <a href="#" class="projects__link">
+                <div class="projects__img">
                   <img src="./images/lab.jpg" alt="lab" width="370" />
-                  <p class="description-text">
+                  <p class="projects__text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-                <div class="project-info">
-                  <h2 class="project-title">Проект LAB</h2>
-                  <p class="project-type">Маркетинг</p>
+                <div class="projects__info">
+                  <h2 class="projects__title">Проект LAB</h2>
+                  <p class="projects__type">Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li>
-              <a href="#" class="projects-list-item">
-                <div class="description-img">
+            <li class="projects__item">
+              <a href="#" class="projects__link">
+                <div class="projects__img">
                   <img
                     src="./images/gbusiness.jpg"
                     alt="gbusiness"
                     width="370"
                   />
-                  <p class="description-text">
+                  <p class="projects__text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-                <div class="project-info">
-                  <h2 class="project-title">Growing Business</h2>
-                  <p class="project-type">Приложение</p>
+                <div class="projects__info">
+                  <h2 class="projects__title">Growing Business</h2>
+                  <p class="projects__type">Приложение</p>
                 </div>
               </a>
             </li>
@@ -233,52 +245,56 @@
         </div>
       </section>
     </main>
-    <footer class="contacts">
-      <div class="container footer-contacts">
+    <footer class="footer">
+      <div class="container footer__container">
         <div>
-          <a href="#" class="logo logo-footer"
-            ><span class="logo-span">Web</span>Studio</a
+          <a href="#" class="logo footer__logo"
+            ><span class="logo__name">Web</span>Studio</a
           >
-          <address>
+          <address class="footer__address">
             <ul class="address-list">
-              <li>г. Киев, пр-т Леси Украинки, 26</li>
-              <li>
-                <a class="link" href="mailto:info@devstudio.com"
+              <li class="address-list__item">
+                г. Киев, пр-т Леси Украинки, 26
+              </li>
+              <li class="address-list__item">
+                <a class="address-list__link" href="mailto:info@devstudio.com"
                   >info@devstudio.com</a
                 >
               </li>
-              <li>
-                <a class="link" href="tel:+380961111111"> +38 096 111 11 11</a>
+              <li class="address-list__item">
+                <a class="address-list__link" href="tel:+380961111111">
+                  +38 096 111 11 11</a
+                >
               </li>
             </ul>
           </address>
         </div>
-        <div class="footer-social">
-          <p class="footer-title">Присоединяйтесь</p>
-          <ul class="icons-list-footer">
+        <div class="join-us">
+          <p class="join-us__title">Присоединяйтесь</p>
+          <ul class="icons-list">
             <li>
-              <a href="#">
+              <a href="#" class="icons-list__link icons-list__link--footer">
                 <svg class="icon">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="#" class="icons-list__link icons-list__link--footer">
                 <svg class="icon">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="#" class="icons-list__link icons-list__link--footer">
                 <svg class="icon">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="#" class="icons-list__link icons-list__link--footer">
                 <svg class="icon">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
@@ -286,13 +302,13 @@
             </li>
           </ul>
         </div>
-        <div class="footer-mailing">
-          <form class="mailing-form">
-            <p class="footer-title">Подпишитесь на рассылку</p>
-            <div class="mailing-block">
+        <div class="mailing">
+          <form>
+            <p class="mailing__title">Подпишитесь на рассылку</p>
+            <div class="mailing__block">
               <label>
                 <input
-                  class="input-mailing"
+                  class="mailing__email"
                   type="email"
                   name="email-mailing"
                   placeholder="E-mail"
