refactor to sass

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
     <header class="header">
@@ -369,7 +369,7 @@
     <footer class="footer">
       <div class="container footer__container">
         <div>
-          <a href="#" class="logo footer__logo"
+          <a href="#" class="logo logo__footer"
             ><span class="logo__name">Web</span>Studio</a
           >
           <address class="footer__address">
@@ -522,7 +522,7 @@
               Условия договора</a
             ></label
           >
-          <button type="submit" class="sign-button modal-form__sign-button">
+          <button type="submit" class="sign-button sign-button__modal-form">
             Отправить
           </button>
         </form>
